kubernetes/01-resources.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: netbootxyz
