kubernetes/04-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: netbootxyz
    kubernetes.io/name: CoreDNS
  name: netbootxyz-tcp
  namespace: netbootxyz
spec:
  externalTrafficPolicy: Local
  sessionAffinity: None
  type: NodePort
  selector:
    app: netbootxyz
  ports:
  - name: webconfig
    targetPort: webconfig
    port: 31000
    nodePort: 31000
    protocol: TCP
  - name: webassets
    targetPort: webassets
    port: 31080
    nodePort: 31080
    protocol: TCP
  - name: tftp
    targetPort: tftp
    port: 69
    nodePort: 31069
    protocol: UDP
