kubernetes/03-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netbootxyz-ingress
  namespace: netbootxyz
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: "netboot.vsval.intel.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: netbootxyz-tcp
            port:
              number: 31000
  - host: "pxe.vsval.intel.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: netbootxyz-tcp
            port:
              number: 31080
